# hangman

./: CMakeLists.txt  Dockerfile  README.md  main.c
testfiles/: test01.txt  test02.txt  test03.txt  test04.txt
